json output, sdk updates
